Cycle care main menu updated