@@ -7,14 +7,14 @@ import java.util.List;
 public class CycleCalculator {
 
     private List<LocalDate> periodHistory;
-    private int avgCycleLength;
+    private double avgCycleLength;
 
     public CycleCalculator(List<LocalDate> periodHistory) {
 
         setPeriodHistory(periodHistory);
     }
 
-    public int getAverageCycleLength() {
+    public double getAverageCycleLength() {
 
         return avgCycleLength;
     }
@@ -30,25 +30,44 @@ public class CycleCalculator {
     }
 
     // Calculate average cycle length safely
-    private int calculateAverage() {
+    private double calculateAverage() {
         if (periodHistory == null || periodHistory.size() < 2) {
             return 28; // Default fallback
         }
 
         long totalDays = 0;
+        int count = 0;
+
         for (int i = 0; i < periodHistory.size() - 1; i++) {
-            totalDays += getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+            int diff = (int) getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+            if (diff > 0) {   // skip zero differences
+                totalDays += diff;
+                count++;
+            }
         }
-        return (int) (totalDays / (periodHistory.size() - 1));
+
+        if (count == 0) return 28; // fallback if all were zeros
+
+        return (double) totalDays / count;
     }
+
+
+
+
+
+        //for (int i = 0; i < periodHistory.size() - 1; i++) {
+            //totalDays += getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+        //}
+        //return (double) totalDays / (periodHistory.size() - 1);
+    //}
 
     // Predict the next expected period date
     public LocalDate estimateNextPeriod() {
         if (periodHistory == null || periodHistory.isEmpty()) {
             return null;
         }
-        LocalDate lastDate = periodHistory.getLast();
-        return lastDate.plusDays(avgCycleLength);
+        LocalDate lastDate = periodHistory.get(periodHistory.size() - 1);
+        return lastDate.plusDays((long)avgCycleLength);
     }
 
     // Return all cycle differences as an int array
@@ -56,13 +75,34 @@ public class CycleCalculator {
         if (periodHistory == null || periodHistory.size() < 2) {
             return new int[] {};
         }
-
-        int[] differences = new int[periodHistory.size() - 1];
+        int count = 0;
         for (int i = 0; i < periodHistory.size() - 1; i++) {
-            differences[i] = (int) getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+            if ((int) getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1)) > 0) {
+                count++;
+            }
         }
+
+        int[] differences = new int[count];
+        int index = 0;
+        for (int i = 0; i < periodHistory.size() - 1; i++) {
+            int diff = (int) getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+            if (diff > 0) {  // skip zeros
+                differences[index++] = diff;
+            }
+        }
+
         return differences;
     }
+
+
+
+
+        //int[] differences = new int[periodHistory.size() - 1];
+        //for (int i = 0; i < periodHistory.size() - 1; i++) {
+            //differences[i] = (int) getDaysBetween(periodHistory.get(i), periodHistory.get(i + 1));
+        //}
+        //return differences;
+    //}
 
     // Custom method to calculate days between two dates
     private long getDaysBetween(LocalDate start, LocalDate end) {
